# eudidcomm

./: Cargo.toml
alice_http/: Cargo.toml
alice_http/src/: lib.rs  main.rs
bob_http/: Cargo.toml
bob_http/src/: lib.rs  main.rs
did/: Cargo.toml
did/src/: resolver.rs
docker/: docker-compose.yml
protocol/: Cargo.toml
protocol/src/: message.rs
