[package]
name = "alice_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
did = { path = "../did" }

didcomm = "0.3.4"
didcomm-rs = "0.7.2"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
