[package]
name = "did"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
didcomm = "0.3.4"
didkit = "0.4.0"
serde_json = "1.0.93"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros"] }
